<?xml version="1.0"?>
<package format="2">
  <name>quatro_cpp_fpfh</name>
  <version>1.0.0</version>
  <description>Quatro CPP example of FPFH</description>

  <maintainer email="shapelim@kaist.ac.kr">Hyungtae Lim</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>glog_catkin</depend>
</package>
